[Ftr]: Show a pop-up when memory limit reaches 70%
Let user know that they have used 70% of their memory limit.
Also updating the package version to 0.7.0 and the name of the package
to el-jupyter-resource-usage(will be used on PyPi server)

Issue: COMP-932

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ exclude =
     versioneer.py
 
 [metadata]
-name = jupyter-resource-usage
+name = el-jupyter-resource-usage
 version = attr: jupyter_resource_usage._version.__version__
 description = Jupyter Extension to show resource usage
 long_description = file: README.md
